[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Other/volume_hud.gd" type="Script" id=1]
[ext_resource path="res://Assets/Other/Font/vcr.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sounds/audio_blip.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="VolumeHUD" type="CanvasLayer"]
layer = 20
script = ExtResource( 1 )

[node name="VolumeBar" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_right = 80.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="VolumeBar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bars" type="Control" parent="VolumeBar"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_right = 80.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 20.0
margin_top = 28.0
margin_right = 28.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 32.0
margin_top = 26.0
margin_right = 40.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 44.0
margin_top = 24.0
margin_right = 52.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 56.0
margin_top = 22.0
margin_right = 64.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 68.0
margin_top = 20.0
margin_right = 76.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 80.0
margin_top = 18.0
margin_right = 88.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 92.0
margin_top = 16.0
margin_right = 100.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 104.0
margin_top = 14.0
margin_right = 112.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="9" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 116.0
margin_top = 12.0
margin_right = 124.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="10" type="ColorRect" parent="VolumeBar/Bars"]
margin_left = 128.0
margin_top = 10.0
margin_right = 136.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VolumeBar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -28.0
custom_fonts/font = SubResource( 2 )
text = "VOLUME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeStream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
